--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             I used HTML, CSS and JavaScript for this project. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, tempore consequuntur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, laudantium in.
                         </p>
                         <a href="#" class="btn"> See Demo <i class='bx bx-chevron-right'></i></a>
-                        <a href="#" class="btn"> See Code <i class='bx bx-chevron-right'></i></a>
+                        <a href="#" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
                 <div class="projects">
@@ -217,8 +217,8 @@
                         <p>
                             I used HTML, CSS and JavaScript for this project. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur quasi veniam ad nostrum accusamus impedit!
                         </p>
-                        <a href="#" class="btn"> See Demo<i class='bx bx-chevron-right'></i></a>
-                        <a href="#" class="btn"> See Code <i class='bx bx-chevron-right'></i></a>
+                        <a href="#" class="btn"> See Demo <i class='bx bx-chevron-right'></i></a>
+                        <a href="#" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
             </div>
