--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <!--Portfolio Content-->
             <div class="portfolio-content">
                 <div class="projects">
-                    <img src="img/imageadsads.png" alt="" class="projects-img1">
+                    <img src="img/portfolio1.PNG" alt="" class="projects-img">
 
                     <div class="projects-text">
                         <h4>
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div class="projects">
-                    <img src="img/imageadsads.png" alt="" class="projects-img2">
+                    <img src="img/portfolio2.PNG" alt="" class="projects-img">
 
                     <div class="projects-text">
                         <h4>
