--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             Coming Soon...
                         </h4>
                         <p>
-                            I used HTML, CSS and JavaScript for this project. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
                         </p>
                         <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="#" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
@@ -232,7 +232,7 @@
                             Coming Soon...
                         </h4>
                         <p>
-                            I used HTML, CSS and JavaScript for this project. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
                         </p>
                         <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="#" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
@@ -247,7 +247,7 @@
                             Coming Soon...
                         </h4>
                         <p>
-                            I used HTML, CSS and JavaScript for this project. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
+                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
                         </p>
                         <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="#" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
@@ -262,7 +262,7 @@
                             Coming Soon...
                         </h4>
                         <p>
-                            I used HTML, CSS and JavaScript for this project. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
+                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
                         </p>
                         <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="#" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
