--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             Coming Soon...
                         </h4>
                         <p>
-                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
+                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosame quis eveniet dolorem tenetur.
                         </p>
                         <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="#" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
