--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             </div>
             <div class="about-text">
                 <p>Hello!</p>
-                <p>My name is Marion Christian Macaraig and I took up Bachelor of Science in computer science and I graduated last June of 2021.
-                    I am interested in Web development both Front End and Back End.</p>
-                <p>While waiting for a job opportunity i do online training or self study for web development because i want to pursue my career in web development
-                    although I only have months in experience, however I am still learning and working in web technologies. 
+                <p>My name is Marion Christian Macaraig and I took up Bachelor of Science in computer science I graduated last June of 2021. I am interested in Web development both Front End and Back End.
+                </p>
+                <p>While waiting for a job opportunity, I do online training or self-study for web development because I want to pursue my career in web development; although I only have months of experience through self-study; 
+                    however, I am still learning and working in web technologies. 
                 </p>
             </div>
         </div>
@@ -202,7 +202,7 @@
                             Crochet Fantasy Shopping Store
                         </h4>
                         <p>
-                            This project is for my sisters mini business crochet hat, unfortunately it's not done yet.
+                            This project is for my sister's mini-business crochet hat. Unfortunately, it's not done yet.
                             It's built with <span><u>HTML ,</u></span> <span><u>CSS</u></span> <span><u>JavaScript.</u></span> <span><u> PHP</u></span> and <span><u> MySql.</u></span>
                         </p>
                         <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
