--- a/index.html
+++ b/index.html
@@ -153,18 +153,22 @@
                     </ul>
                 </div>
                 <div class="education">
-                    <h4><label>Other Activities</label></h4>
+                    <h4><label>Other Skills</label></h4>
                     <ul class="edu-list">
-                        <li class="item">
-                            <p><span>HTML5, CSS3, JavaScript, PHP and MySQL</span> I started a self study learning this since August 2022 and Still learning to enhance my knowledge </p>
+                         <li class="item">
+                            <p><span>MySQL and MsSQl</span></p>
                         </li>
 
                         <li class="item">
-                            <p><span>C# and MsSQL</span> We used this when I was in college. </p>
+                            <p><span>Visual Basic</span></p>
                         </li>
 
                         <li class="item">
-                            <p><span>ReactJs, Tailwind</span> Have a basic knowledge </p>
+                            <p><span>Microsoft Offices</span></p>
+                        </li>
+
+                        <li class="item">
+                            <p><span>React and Tailwind</span> (coming soon..) </p>
                         </li>
                     </ul>
                 </div>
