--- a/index.html
+++ b/index.html
@@ -282,9 +282,11 @@
         <h1 class="heading">Contact</h1>
         <h2 class="heading2">Say Hello.</h2>
         <!--Contact Form-->
-        <form action="" class="contact-form" id="contact-form">
+        <form action="https://formsubmit.co/marionchristianmacaraig@gmail.com" method="post" class="contact-form" id="contact-form">
+            <input type="hidden" name="_captcha" value="false">
             <input type="text" placeholder="Your Name" class="name" required>
             <input type="email" name="" id="" placeholder="Email Address..." class="email" required>
+            <input type="hidden" name="_next" value="https://macaraigmariongithub.github.io/macaraigmarion.com/thankyou.html">
             <textarea name="" id="" cols="30" rows="10" placeholder="Write message here..." class="message" required></textarea>
             <input type="submit" value="Submit" class="send-btn">
         </form>
