--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="about-data">    
                 <!-- <h2>Computer Science Graduate</h2> -->
                 <img src="img/christian.png" alt="" class="about-img">
-                <a href="#" class="btn" download="">
+                <a href="resume/cv.marionchristianmacaraig.pdf" class="btn" download="">
                     Download CV
                     <i class='bx bx-download' ></i>
                 </a>
@@ -304,7 +304,7 @@
         <!--Footer Links-->
         <div class="footer-links">
             <a href="#about">About</a>
-            <a href="#services">Services</a>
+            <a href="#projects">Services</a>
             <a href="#contact">Contact</a>
         </div>
         <!--Copyright-->
