--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <!--Footer Links-->
         <div class="footer-links">
             <a href="#about">About</a>
-            <a href="#projects">Portfolio</a>
+            <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </div>
         <!--Copyright-->
