--- a/thankyoupages/thankyou.html
+++ b/thankyoupages/thankyou.html
@@ -68,7 +68,8 @@
       Your message just showed up in my inbox. Talk to you soon!
     </h2>
 
-    <h3><button><a href="/index.html"> Back to Home </a></button></h3>
+    <h3><button><a href="index.html"> Back to Home </a></button></h3>
+       
 
   </div>
    
