--- a/index.html
+++ b/index.html
@@ -199,6 +199,37 @@
                     </div>
                 </div>
                 <div class="projects">
+                    <img src="img/Travel&Tour.PNG" alt="" class="projects-img">
+
+                    <div class="projects-text">
+                        <h4>
+                            Travel and Tour Agency
+                        </h4>
+                        <p>
+                            This is sample project for Travel and Tour agency. I want to recreate it someday using React and tailwind but in this project 
+                            I'm using <span><u>HTML ,</u></span> <span><u>CSS</u></span> and <span><u>JavaScript.</u></span>
+                        </p>
+                        <a href="https://macaraigmariongithub.github.io/Travel-Tour/" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
+                    </div>
+                </div>
+                <div class="projects">
+                    <img src="img/QrCode.PNG" alt="" class="projects-img">
+
+                    <div class="projects-text">
+                        <h4>
+                            Qr Code Generator
+                        </h4>
+                        <p>
+                            This project where my first time using react so I think it's a pretty good project. It's built with  
+                            <span><u>React ,</u></span> <span><u>HTML</u></span> and <span><u>CSS.</u></span>
+                        </p>
+                        <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
+                    </div>
+                </div>
+                
+                <div class="projects">
                     <img src="img/portfolio2.PNG" alt="" class="projects-img">
 
                     <div class="projects-text">
@@ -208,35 +239,6 @@
                         <p>
                             This project is for my sister's mini-business crochet hat. Unfortunately, it's not done yet.
                             It's built with <span><u>HTML ,</u></span> <span><u>CSS</u></span> <span><u>JavaScript.</u></span> <span><u> PHP</u></span> and <span><u> MySql.</u></span>
-                        </p>
-                        <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
-                        <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
-                    </div>
-                </div>
-                <div class="projects">
-                    <img src="img/imageadsads.png" alt="" class="projects-img">
-
-                    <div class="projects-text">
-                        <h4>
-                            Coming Soon...
-                        </h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
-                        </p>
-                        <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
-                        <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
-                    </div>
-                </div>
-                
-                <div class="projects">
-                    <img src="img/imageadsads.png" alt="" class="projects-img">
-
-                    <div class="projects-text">
-                        <h4>
-                            Coming Soon...
-                        </h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam quis eveniet dolorem tenetur.
                         </p>
                         <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
