--- a/index.html
+++ b/index.html
@@ -142,13 +142,7 @@
 
                     <ul class="tech-skills">
                         <li class="item">
-                            <p>C# </p>
-                        </li>
-                    </ul>
-
-                    <ul class="tech-skills">
-                        <li class="item">
-                            <p>PHP </p>
+                            <p>C#, Visual Basic, and PHP </p>
                         </li>
                     </ul>
                 </div>
@@ -156,19 +150,19 @@
                     <h4><label>Other Skills</label></h4>
                     <ul class="edu-list">
                          <li class="item">
-                            <p><span>MySQL and MsSQl</span></p>
-                        </li>
-
-                        <li class="item">
-                            <p><span>Visual Basic</span></p>
+                            <p><span>Data Encoding</span></p>
                         </li>
 
                         <li class="item">
                             <p><span>Microsoft Offices</span></p>
                         </li>
+                        
+                        <li class="item">
+                            <p><span>MySQL and MsSQl</span></p>
+                        </li>
 
                         <li class="item">
-                            <p><span>React and Tailwind</span> (coming soon..) </p>
+                            <p><span>React and Tailwind</p>
                         </li>
                     </ul>
                 </div>
@@ -209,7 +203,7 @@
                             This is sample project for Travel and Tour agency. I want to recreate it someday using React and tailwind but in this project 
                             I'm using <span><u>HTML ,</u></span> <span><u>CSS</u></span> and <span><u>JavaScript.</u></span>
                         </p>
-                        <a href="https://macaraigmariongithub.github.io/Travel-Tour/" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://macaraigmariongithub.github.io/Travel-Tour/" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
