--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
                 
                 <div class="projects">
-                    <img src="img/imageadsads.png" alt="" class="projects-img">
+                    <img src="img/currencyconverter.PNG" alt="" class="projects-img">
 
                     <div class="projects-text">
                         <h4>
