--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             This is version 2.0 of my personal website, which contains a less code than the first one.
                             It's built with <span><u>HTML ,</u></span> <span><u>CSS</u></span> and <span><u>JavaScript.</u></span>
                         </p>
-                        <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://macaraigmariongithub.github.io/portfolio2.0/" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
