--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             This project where my first time using react so I think it's a pretty good project. It's built with  
                             <span><u>React ,</u></span> <span><u>HTML</u></span> and <span><u>CSS.</u></span>
                         </p>
-                        <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://qr-code-generator-webapp.netlify.app" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
@@ -261,12 +261,13 @@
 
                     <div class="projects-text">
                         <h4>
-                            Coming Soon...
+                            Chat Application
                         </h4>
                         <p>
-                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosame quis eveniet dolorem tenetur.
+                             This project was inpired by JavaScript Mastery on Youtube. I called it Bored-chat-app. This is a like Microsoft teams chat app and
+                            I built this using <span><u>HTML ,</u></span> <span><u>CSS</u></span> <span><u>JavaScript.</u></span> and <span><u> React.</u></span>
                         </p>
-                        <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="bored-chat-app.netlify.app" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
