--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                              This project was inpired by JavaScript Mastery on Youtube. I called it Bored-chat-app. This is a like Microsoft teams chat app and
                             I built this using <span><u>HTML ,</u></span> <span><u>CSS</u></span> <span><u>JavaScript.</u></span> and <span><u> React.</u></span>
                         </p>
-                        <a href="bored-chat-app.netlify.app" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://bored-chat-app.netlify.app" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
