--- a/index.html
+++ b/index.html
@@ -188,10 +188,26 @@
                             This is version 2.0 of my personal website, which contains a less code than the first one.
                             It's built with <span><u>HTML ,</u></span> <span><u>CSS</u></span> and <span><u>JavaScript.</u></span>
                         </p>
-                        <a href="https://macaraigmariongithub.github.io/portfolio2.0/" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://macaraigmariongithub.github.io/portfolio2.0/" target="_blank" class="btn"> Live Demo <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
+                
+                <div class="projects">
+                    <img src="img/Form-Validator.PNG" alt="" class="projects-img">
+
+                    <div class="projects-text">
+                        <h4>
+                            Form Validator
+                        </h4>
+                        <p>
+                            Sample Glassmorphism Form Validator. I'm using <span><u>HTML ,</u></span> <span><u>CSS</u></span> and <span><u>JavaScript.</u></span>
+                        </p>
+                        <a href="https://macaraigmariongithub.github.io/Form-Validator/" target="_blank" class="btn">Live Demo<i class='bx bx-chevron-right'></i></a>
+                        <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
+                    </div>
+                </div>
+                
                 <div class="projects">
                     <img src="img/Travel&Tour.PNG" alt="" class="projects-img">
 
@@ -203,7 +219,7 @@
                             This is sample project for Travel and Tour agency. I want to recreate it someday using React and tailwind but in this project 
                             I'm using <span><u>HTML ,</u></span> <span><u>CSS</u></span> and <span><u>JavaScript.</u></span>
                         </p>
-                        <a href="https://macaraigmariongithub.github.io/Travel-Tour/" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://macaraigmariongithub.github.io/Travel-Tour/" target="_blank" class="btn"> Live Demo <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
@@ -219,7 +235,7 @@
                              This project was inspired by codingnepal on Youtube. It is pretty cool project to enhance your skills especially when you are 
                              beginner in JavaScript like me and it's built with <span><u>HMTL ,</u></span> <span><u>CSS</u></span> and <span><u>JavaScript.</u></span>
                         </p>
-                        <a href="https://macaraigmariongithub.github.io/currency-converter/" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://macaraigmariongithub.github.io/currency-converter/" target="_blank" class="btn"> Live Demo <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
@@ -235,7 +251,7 @@
                             This project where my first time using react so I think it's a pretty good project. It's built with  
                             <span><u>React ,</u></span> <span><u>HTML</u></span> and <span><u>CSS.</u></span>
                         </p>
-                        <a href="https://qr-code-generator-webapp.netlify.app" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://qr-code-generator-webapp.netlify.app" target="_blank" class="btn"> Live Demo <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
@@ -251,7 +267,7 @@
                             This project is for my sister's mini-business crochet hat. Unfortunately, it's not done yet.
                             It's built with <span><u>HTML ,</u></span> <span><u>CSS</u></span> <span><u>JavaScript.</u></span> <span><u> PHP</u></span> and <span><u> MySql.</u></span>
                         </p>
-                        <a href="#" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="#" class="btn"> Live Demo <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
@@ -267,7 +283,7 @@
                              This project was inpired by JavaScript Mastery on Youtube. I called it Bored-chat-app. This is a like Microsoft teams chat app and
                             I built this using <span><u>HTML ,</u></span> <span><u>CSS</u></span> <span><u>JavaScript.</u></span> and <span><u> React.</u></span>
                         </p>
-                        <a href="https://bored-chat-app.netlify.app" target="_blank" class="btn"> Visit Site <i class='bx bx-chevron-right'></i></a>
+                        <a href="https://bored-chat-app.netlify.app" target="_blank" class="btn"> Live Demo <i class='bx bx-chevron-right'></i></a>
                         <a href="https://github.com/macaraigmariongithub" target="_blank" class="btn"> GitHub <i class='bx bx-chevron-right'></i></a>
                     </div>
                 </div>
