--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </div>
                 
                 <div class="projects">
-                    <img src="img/Flappy-Bird.PNG" alt="" class="projects-img">
+                    <img src="img/Flappy-Bird.png" alt="" class="projects-img">
 
                     <div class="projects-text">
                         <h4>
